tests/codegen/compile/runtime/fail/non_async_test.stderr
error: Only async functions are supported
 --> $DIR/non_async_test.rs:6:1
  |
6 | fn runtime_attribute_test_should_add_the_test_attribute() {}
  | ^^
  |
  = help: Consider writing the signature as:
          
          async fn runtime_attribute_test_should_add_the_test_attribute ()
